[package]
name = "msg-in-png"
version = "0.1.0"
edition = "2021"
authors = ["kolulu"]
description = "A relatively simple tool to add a single message into a png file without encryption."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crc32fast = "1.3.2"
clap = { version = "3.1.6", features = ["derive"] }